5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1674_1103.log
== TEST (2019-04-29 19:43:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
a = int(input("Digite aqui o primeiro numero: "))
b = int(input("Digite aqui o segundo numero: "))
if (b > a):
	if ((a <= x) and (x <= b):
		 print("x pertence ao intervalo a, b")
   else:
		 print("x nao pertence ao intervalo a, b")
else:
		 print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 6
    if ((a <= x) and (x <= b):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:44:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = int(input("Digite aqui o valor de x: "))
a = int(input("Digite aqui o valor de a: "))
b = int(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b):
		 print("x pertence ao intervalo a, b")
   else:
		 print("x nao pertence ao intervalo a, b")
else:
		 print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 7
    if ((a <= x) and (x <= b):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:44:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = int(input("Digite aqui o valor de x: "))
a = int(input("Digite aqui o valor de a: "))
b = int(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print("x pertence ao intervalo a, b")
   else:
		 print("x nao pertence ao intervalo a, b")
else:
		 print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 9
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:45:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = int(input("Digite aqui o valor de x: "))
a = int(input("Digite aqui o valor de a: "))
b = int(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print("x pertence ao intervalo a, b")
	else:
		 print("x nao pertence ao intervalo a, b")
else:
		 print("Entradas a e b invalidas")
-- OUTPUT:
x nao pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:46:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = int(input("Digite aqui o valor de x: "))
a = int(input("Digite aqui o valor de a: "))
b = int(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print("x pertence ao intervalo a, b")
	else:
		 print("x nao pertence ao intervalo a, b")
else:
		 print("Entradas a e b invalidas")
-- OUTPUT:
x nao pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = int(input("Digite aqui o valor de x: "))
a = int(input("Digite aqui o valor de a: "))
b = int(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print(x "pertence ao intervalo" a"," b)
	else:
		 print(x "nao pertence ao intervalo" a"," b)
else:
		 print("Entradas" a "e" b "invalidas")
-- ERROR:
File "XXXX", line 8
    print(x "pertence ao intervalo" a"," b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:49:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = float(input("Digite aqui o valor de x: "))
a = float(input("Digite aqui o valor de a: "))
b = float(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print(x, "pertence ao intervalo", a,",", b)
	else:
		 print(x, "nao pertence ao intervalo", a,",", b)
else:
		 print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:49:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identifi Use as mensagens de erro para corrigir seu código.tinp
x = float(input("Digite aqui o valor de x: "))
a = float(input("Digite aqui o valor de a: "))
b = float(input("Digite aqui o valor de b: "))
if (b > a):
	if ((a <= x) and (x <= b)):
		 print(x, "pertence ao intervalo", a,",", b)
	else:
		 print(x, "nao pertence ao intervalo", a,",", b)
else:
		 print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.197772
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
